--- a/devshub_project/projects/templates/projects/project_detail.html
+++ b/devshub_project/projects/templates/projects/project_detail.html
@@ -70,7 +70,7 @@
       {% endif %}
 
       <div class="prose max-w-5xl w-full mx-auto text-lg mb-auto">
-        <div class="font-medium">
+        <div>
           {{ project.description|safe }}
         </div>
       </div>
