--- a/devshub_project/users/templates/users/user_detail.html
+++ b/devshub_project/users/templates/users/user_detail.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load static %}
+{% load thumbnail %}
 
 {% block title %}
   {% if is_owner %}Мой профиль{% else %}Профиль {{ user.username }}{% endif %}
@@ -6,42 +8,98 @@
 
 {% block content %}
 
-  <h1>
-    {% if is_owner %}Привет, {% endif %}{{ user.username }}
-  </h1>
+  <div class="flex flex-col flex-1">
+    <div class="container mx-auto px-4 flex flex-col">
 
-  <div>
-    <a href="{% url "user_cards" user.id %}">Карточки</a>
-    <a href="{% url "user_decks" user.id %}">Колоды</a>
-    <a href="{% url "user_projects" user.id %}">Проекты</a>
+      <div class="py-4">
+        <div class="mb-2">
+          {% include "includes/title.html" with title="Профиль" %}
+        </div>
+        {% if user.avatar %}
+        {% thumbnail user.avatar "240x240" crop="center" as avatar %}
+        <div>
+          <div class="mx-auto rounded-full overflow-hidden max-w-60 max-h-60 shadow-md shadow-gray-400">
+            <img src="{{ avatar.url }}" alt="" class="w-full h-full rounded-full object-cover object-center">
+          </div>
+        </div>
+        {% endif %}
+      </div>
+
+      <div class="py-4">
+
+        <div class="mb-4">
+          <h2 class="text-2xl text-center text-gray-700 font-semibold">
+            Статистика пользователя
+          </h2>
+        </div>
+        <div class="mb-4">
+          <div class="flex justify-center items-center gap-10 text-lg text-gray-700 mb-8">
+            {% if user.codewars_username %}
+              <a href="https://www.codewars.com/users/{{user.codewars_username}}" target="_blank" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium danger shadow-xs shadow-red-200 text-shadow-xs text-shadow-red-200">Профиль codewars</a>
+            {% endif %}
+            <a href="{% url "user_cards" user.id %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium primary shadow-xs shadow-blue-200 text-shadow-xs text-shadow-blue-200">Карточки</a>
+            <a href="{% url "user_decks" user.id %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium success shadow-xs shadow-green-200 text-shadow-xs text-shadow-green-200">Колоды</a>
+            <a href="{% url "user_projects" user.id %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium warning shadow-xs shadow-orange-200 text-shadow-xs text-shadow-orange-200">Проекты</a>
+          </div>
+        </div>
+        <div class="mb-4">
+          <div class="max-w-2xl mx-auto">
+            <canvas
+              width="500"
+              height="500"
+              data-js-stats-canvas
+              data-js-total-completed-katas="{{ codewars_stats.total_completed_katas }}"
+              data-js-cards-in-study="{{ cards_stats.in_study }}"
+              data-js-decks-in-study="{{ decks_stats.in_study }}"
+              data-js-total-projects="{{ projects_stats.total }}">
+            </canvas>
+          </div>
+        </div>
+        <div>
+          <div class="grid grid-cols-4 font-medium text-lg">
+            <div class="flex justify-center">
+              <ul class="flex flex-col gap-y-2">
+                <li>
+                  <a href="https://www.codewars.com/users/{{user.codewars_username}}" target="_blank" class="group">
+                    Codewars аккаунт: <span class="text-blue-600">{{ user.codewars_username }}</span>
+                  </a>
+                </li>
+                <li>Очки (honor): {{ codewars_stats.honor }}</li>
+                <li>Позиция в топе: {{ codewars_stats.leaderboard_position }}</li>
+                <li>Языки: {{ codewars_stats.languages|join:', ' }}</li>
+                <li>Решенных здач: {{ codewars_stats.total_completed_katas }}</li>
+              </ul>
+            </div>
+            <div class="flex justify-center">
+              <ul class="flex flex-col gap-y-2">
+                <li>Всего карточек: {{ cards_stats.total }}</li>
+                <li>Создано карточек: {{ cards_stats.created }}</li>
+                <li>Сохранено карточек: {{ cards_stats.saved }}</li>
+                <li>В изучении: {{ cards_stats.in_study }}</li>
+              </ul>
+            </div>
+            <div class="flex justify-center">
+              <ul class="flex flex-col gap-y-2">
+                <li>Всего колод: {{ decks_stats.total }}</li>
+                <li>Создано колод: {{ decks_stats.created }}</li>
+                <li>Сохранено колод: {{ decks_stats.saved }}</li>
+                <li>В изучении: {{ decks_stats.in_study }}</li>
+              </ul>
+            </div>
+            <div class="flex justify-center">
+              <ul class="flex flex-col gap-y-2">
+                <li>Всего проектов: {{ projects_stats.total }}</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </div>
-
-  <h2>Статистика</h2>
-
-  <div>
-    <div>
-      <span>Всего карточек: {{ cards_stats.total }}</span>
-      <span>Создано карточек: {{ cards_stats.created }}</span>
-      <span>Сохранено карточек: {{ cards_stats.saved }}</span>
-      <span>В изучении: {{ cards_stats.in_study }}</span>
-    </div>
-    <div>
-      <span>Всего колод: {{ decks_stats.total }}</span>
-      <span>Создано колод: {{ decks_stats.created }}</span>
-      <span>Сохранено колод: {{ decks_stats.saved }}</span>
-      <span>В изучении: {{ decks_stats.in_study }}</span>
-    </div>
-    <div>
-      <span>Всего проектов: {{ projects_stats.total }}</span>
-    </div>
-    {% if codewars_stats %}
-      <span>ссылка: {{ user.codewars_username }}</span>
-      <span>honor: {{ codewars_stats.honor }}</span>
-      <span>leaderboard_position: {{ codewars_stats.leaderboard_position }}</span>
-      <span>languages: {{ codewars_stats.languages|join:', ' }}</span>
-      <span>total_completed_katas: {{ codewars_stats.total_completed_katas }}</span>
-    </div>
-    {% endif %}
-  </div>
-
 {% endblock content %}
+
+{% block scripts %}
+  <script src="{% static "js/chart.umd.min.js" %}"></script>
+  <script src="{% static "users/js/user-stats.js" %}"></script>
+{% endblock scripts %}
