refactor(templates): rename thumbnail aliases to related model field name

--- a/devshub_project/projects/templates/components/project.html
+++ b/devshub_project/projects/templates/components/project.html
@@ -3,11 +3,11 @@
 
   <div class="flex-2">
     {% if project.cover_image %}
-      {% thumbnail project.cover_image "320x160" crop="center" as im %}
+      {% thumbnail project.cover_image "320x160" crop="center" as cover %}
       <div class="rounded-lg overflow-hidden max-w-80 max-h-40 shadow-md shadow-gray-400">
         <a href="{{ project.get_absolute_url }}">
           <img
-            src="{{ im.url }}"
+            src="{{ cover.url }}"
             alt="Обложка {{ project.title }}"
             class="w-full h-full rounded-lg object-cover object-center duration-500 transition-transform hover:scale-110"
           >
