--- a/devshub_project/users/templates/components/user.html
+++ b/devshub_project/users/templates/components/user.html
@@ -4,11 +4,11 @@
 
   <div class="flex-1">
     {% if user.avatar %}
-      {% thumbnail user.avatar "80x80" crop="center" as im %}
+      {% thumbnail user.avatar "80x80" crop="center" as avatar %}
       <div class="rounded-full overflow-hidden max-w-20 max-h-20 shadow-md shadow-gray-400">
         <a href="{{ user.get_absolute_url }}">
           <img
-            src="{{ im.url }}"
+            src="{{ avatar.url }}"
             alt="Аватар {{ user.username }}"
             class="w-full h-full rounded-full object-cover object-center duration-500 transition-transform hover:scale-110"
           >
