--- a/devshub_project/templates/includes/title.html
+++ b/devshub_project/templates/includes/title.html
@@ -1,5 +1,7 @@
-<h1 class="text-2xl font-semibold text-center">
-  {% if card %}
+<h1 class="text-2xl font-semibold text-center text-shadow-sm">
+  {% if user  %}
+    {{ title }} {{ user.username }}
+  {% elif card %}
     {{ title }} "{{ card.question|truncatechars:30|striptags }}"
   {% elif deck %}
     {{ title }} "{{ deck.title|truncatechars:30 }}"
