--- a/devshub_project/users/templates/users/user_decks.html
+++ b/devshub_project/users/templates/users/user_decks.html
@@ -10,11 +10,7 @@
     <div class="container mx-auto px-4 flex flex-col flex-1">
 
       <div class="mb-8">
-        {% if is_owner %}
-            {% include "includes/title.html" with title="Мои колоды" %}
-        {% else %}
-            {% include "includes/title.html" with title="Колоды "|add:user.username %}
-        {% endif %}
+        {% include "includes/title.html" with title="Колоды " %}
       </div>
 
       <div class="max-w-1/2 w-full mx-auto mb-8">
