--- a/devshub_project/users/templates/users/user_projects.html
+++ b/devshub_project/users/templates/users/user_projects.html
@@ -9,11 +9,7 @@
     <div class="container mx-auto px-4 flex flex-col flex-1">
 
       <div class="mb-8">
-        {% if is_owner %}
-            {% include "includes/title.html" with title="Мои проекты" %}
-        {% else %}
-            {% include "includes/title.html" with title="Проекты "|add:user.username %}
-        {% endif %}
+        {% include "includes/title.html" with title="Проекты " %}
       </div>
 
       <div class="max-w-1/2 w-full mx-auto mb-8">
