refactor: change title structure, use only keyword while include component

--- a/devshub_project/cards/templates/cards/card_confirm_delete.html
+++ b/devshub_project/cards/templates/cards/card_confirm_delete.html
@@ -7,11 +7,11 @@
     <div class="container mx-auto px-4 flex flex-col">
 
       <div class="mb-8">
-        {% include "includes/title.html" with title="Вы собиратесь удалить карточку" card=card %}
+        {% include "includes/title.html" with text="Вы собиратесь удалить карточку" title=card.question only %}
       </div>
 
       <div>
-        {% include "includes/confirm_delete_form.html" with obj=card %}
+        {% include "includes/confirm_delete_form.html" with obj=card only %}
       </div>
 
     </div>
