--- a/devshub_project/decks/templates/components/deck.html
+++ b/devshub_project/decks/templates/components/deck.html
@@ -31,7 +31,7 @@
     {% endif %}
 
     {% if not is_owner %}
-      {% include "includes/saved_status.html" %}
+      {% include "includes/saved_status.html" with is_author=is_author is_saved=is_saved only %}
     {% endif %}
 
 
