--- a/devshub_project/decks/templates/decks/deck_confirm_delete.html
+++ b/devshub_project/decks/templates/decks/deck_confirm_delete.html
@@ -8,11 +8,11 @@
     <div class="container mx-auto px-4 flex flex-col">
 
       <div class="mb-8">
-        {% include "includes/title.html" with title="Вы собиратесь удалить колоду" deck=deck %}
+        {% include "includes/title.html" with text="Вы собиратесь удалить колоду" title=deck.title only %}
       </div>
 
       <div>
-        {% include "includes/confirm_delete_form.html" with obj=deck %}
+        {% include "includes/confirm_delete_form.html" with obj=deck only %}
       </div>
 
     </div>
