--- a/devshub_project/decks/templates/decks/deck_list.html
+++ b/devshub_project/decks/templates/decks/deck_list.html
@@ -7,19 +7,19 @@
     <div class="container mx-auto px-4 flex flex-col flex-1">
 
       <div class="mb-8">
-        {% include "includes/title.html" with title="Список колод" %}
+        {% include "includes/title.html" with text="Список колод" only %}
       </div>
 
       <div class="max-w-1/2 w-full mx-auto mb-8">
-        {% include "includes/search_form.html" with placeholder="Циклы в Python" %}
+        {% include "includes/search_form.html" with placeholder="Циклы в Python" only %}
       </div>
 
       <div class="mb-auto">
-        {% include "includes/deck_list.html" with decks=decks user=request.user %}
+        {% include "includes/deck_list.html" with decks=decks user=request.user only %}
       </div>
 
       <div class="pt-8">
-        {% include "includes/pagination.html" with page_obj=decks %}
+        {% include "includes/pagination.html" with page_obj=decks only %}
       </div>
 
     </div>
