--- a/devshub_project/projects/templates/projects/project_list.html
+++ b/devshub_project/projects/templates/projects/project_list.html
@@ -7,19 +7,19 @@
     <div class="container mx-auto px-4 flex flex-col flex-1">
 
       <div class="mb-8">
-        {% include "includes/title.html" with title="Список проектов" %}
+        {% include "includes/title.html" with text="Список проектов" only %}
       </div>
 
       <div class="max-w-1/2 w-full mx-auto mb-8">
-        {% include "includes/search_form.html" with placeholder="Сервис сокращения ссылок на FastAPI" %}
+        {% include "includes/search_form.html" with placeholder="Сервис сокращения ссылок на FastAPI" only %}
       </div>
 
       <div class="mb-auto">
-        {% include "includes/project_list.html" with projects=projects user=request.user %}
+        {% include "includes/project_list.html" with projects=projects user=request.user only %}
       </div>
 
       <div class="pt-8">
-        {% include "includes/pagination.html" with page_obj=projects %}
+        {% include "includes/pagination.html" with page_obj=projects only %}
       </div>
 
     </div>
