--- a/devshub_project/templates/includes/title.html
+++ b/devshub_project/templates/includes/title.html
@@ -1,14 +1,4 @@
 <h1 class="text-2xl font-semibold text-center text-shadow-sm">
-  {% if user  %}
-    {{ title }} {{ user.username }}
-  {% elif card %}
-    {{ title }} "{{ card.question|truncatechars:30|striptags }}"
-  {% elif deck %}
-    {{ title }} "{{ deck.title|truncatechars:30 }}"
-  {% elif project %}
-    {{ title }} "{{ project.title|truncatechars:30 }}"
-  {% else %}
-    {{ title }}
-  {% endif %}
+  {{ text }} {{ title|striptags|truncatechars:40 }}
 </h1>
 
