--- a/devshub_project/users/templates/users/user_cards.html
+++ b/devshub_project/users/templates/users/user_cards.html
@@ -9,19 +9,19 @@
     <div class="container mx-auto px-4 flex flex-col flex-1">
 
       <div class="mb-8">
-        {% include "includes/title.html" with title="Карточки " %}
+        {% include "includes/title.html" with text="Карточки" title=user.username only %}
       </div>
 
       <div class="max-w-1/2 w-full mx-auto mb-8">
-        {% include "includes/search_form.html" with placeholder="Что такое итератор?" %}
+        {% include "includes/search_form.html" with placeholder="Что такое итератор?" only %}
       </div>
 
       <div class="mb-auto">
-        {% include "includes/card_list.html" with cards=user_cards user=request.user %}
+        {% include "includes/card_list.html" with cards=user_cards user=request.user only %}
       </div>
 
       <div class="pt-8">
-        {% include "includes/pagination.html" with page_obj=user_cards %}
+        {% include "includes/pagination.html" with page_obj=user_cards only %}
       </div>
 
     </div>
