--- a/devshub_project/users/templates/users/user_form.html
+++ b/devshub_project/users/templates/users/user_form.html
@@ -8,7 +8,7 @@
     <div class="container mx-auto px-4 flex flex-col">
 
     <div>
-      {% include "includes/title.html" with title="Данные профиля" %}
+      {% include "includes/title.html" with text="Данные профиля" only  %}
     </div>
 
     <div class="max-w-1/2 w-full mx-auto font-medium mb-10">
