--- a/devshub_project/users/templates/users/user_list.html
+++ b/devshub_project/users/templates/users/user_list.html
@@ -8,7 +8,7 @@
     <div class="container mx-auto px-4 flex flex-col flex-1">
 
       <div class="mb-8">
-        {% include "includes/title.html" with title="Список пользователей" %}
+        {% include "includes/title.html" with text="Список пользователей" only %}
       </div>
 
       <div class="max-w-1/2 w-full mx-auto mb-8">
@@ -16,11 +16,11 @@
       </div>
 
       <div>
-        {% include "includes/user_list.html" with users=users %}
+        {% include "includes/user_list.html" with users=users only %}
       </div>
 
       <div class="pt-8">
-        {% include "includes/pagination.html" with page_obj=users %}
+        {% include "includes/pagination.html" with page_obj=users only %}
       </div>
 
     </div>
