--- a/devshub_project/users/templates/users/user_projects.html
+++ b/devshub_project/users/templates/users/user_projects.html
@@ -9,19 +9,19 @@
     <div class="container mx-auto px-4 flex flex-col flex-1">
 
       <div class="mb-8">
-        {% include "includes/title.html" with title="Проекты " %}
+        {% include "includes/title.html" with text="Проекты" title=user.username only %}
       </div>
 
       <div class="max-w-1/2 w-full mx-auto mb-8">
-        {% include "includes/search_form.html" with placeholder="Сервис сокращения ссылок на FastAPI" %}
+        {% include "includes/search_form.html" with placeholder="Сервис сокращения ссылок на FastAPI" only %}
       </div>
 
       <div class="mb-auto">
-        {% include "includes/project_list.html" with projects=user_projects user=request.user %}
+        {% include "includes/project_list.html" with projects=user_projects user=request.user only %}
       </div>
 
       <div class="pt-8">
-        {% include "includes/pagination.html" with page_obj=user_projects %}
+        {% include "includes/pagination.html" with page_obj=user_projects only %}
       </div>
 
     </div>
