--- a/devshub_project/users/templates/users/user_decks.html
+++ b/devshub_project/users/templates/users/user_decks.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="max-w-1/2 w-full mx-auto mb-8">
-        {% include "includes/search_form.html" with placeholder="Циклы в Python" only %}
+        {% include "includes/search_form.html" with placeholder="Циклы в Python" request=request request=request only %}
       </div>
 
       <div class="mb-auto">
@@ -22,7 +22,7 @@
       </div>
 
       <div class="pt-8">
-        {% include "includes/pagination.html" with page_obj=user_decks only %}
+        {% include "includes/pagination.html" with page_obj=user_decks query=query sort_by=sort_by only %}
       </div>
 
     </div>
