--- a/devshub_project/decks/templates/decks/deck_list.html
+++ b/devshub_project/decks/templates/decks/deck_list.html
@@ -11,7 +11,7 @@
       </div>
 
       <div class="max-w-1/2 w-full mx-auto mb-8">
-        {% include "includes/search_form.html" with placeholder="Циклы в Python" only %}
+        {% include "includes/search_form.html" with placeholder="Циклы в Python" request=request only %}
       </div>
 
       <div class="mb-auto">
@@ -19,7 +19,7 @@
       </div>
 
       <div class="pt-8">
-        {% include "includes/pagination.html" with page_obj=decks only %}
+        {% include "includes/pagination.html" with page_obj=decks query=query sort_by=sort_by only %}
       </div>
 
     </div>
