--- a/devshub_project/users/templates/users/user_cards.html
+++ b/devshub_project/users/templates/users/user_cards.html
@@ -13,7 +13,7 @@
       </div>
 
       <div class="max-w-1/2 w-full mx-auto mb-8">
-        {% include "includes/search_form.html" with placeholder="Что такое итератор?" only %}
+        {% include "includes/search_form.html" with placeholder="Что такое итератор?" request=request only %}
       </div>
 
       <div class="mb-auto">
@@ -21,7 +21,7 @@
       </div>
 
       <div class="pt-8">
-        {% include "includes/pagination.html" with page_obj=user_cards only %}
+        {% include "includes/pagination.html" with page_obj=user_cards query=query sort_by=sort_by only %}
       </div>
 
     </div>
