feat(auth): add markup and styles for password reset templates
- added custom UserSetPasswordForm
- added widgets for UserPasswordResetForm
- added html markup and tailwind classes for password_reset templates
- changed message for email in send_confirmation_email_task

--- a/devshub_project/users/templates/registration/password_reset_confirm.html
+++ b/devshub_project/users/templates/registration/password_reset_confirm.html
@@ -3,10 +3,71 @@
 {% block title %}Сброс пароля{% endblock title %}
 
 {% block content %}
-  <h1>Введите новый пароль</h1>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Подтвердить</button>
-  </form>
+  <div class="flex flex-col flex-1 py-8">
+    <div class="container mx-auto px-4 flex flex-col flex-1">
+
+      {% if form %}
+        <div class="mb-8">
+          {% include "includes/title.html" with text="Восстановления пароля" only %}
+        </div>
+        <div class="max-w-1/2 w-full mx-auto font-medium mb-10">
+          <form method="post">
+            {% csrf_token %}
+
+            {% if form.non_field_errors %}
+              <ul class="errorlist">
+                {% for error in form.non_field_errors %}
+                  <li>{{ error }}</li>
+                {% endfor %}
+              </ul>
+            {% endif %}
+
+            <!-- New password1 -->
+            <div>
+              {{ form.new_password1.label_tag }}
+              {{ form.new_password1}}
+              <span class="mt-1 inline-block w-full text-sm text-gray-500">
+                {{ form.new_password1.help_text }}
+              </span>
+              {% if form.new_password1.errors %}
+                <ul class="errorlist mb-2">
+                  {% for error in form.new_password1.errors %}
+                    <li>{{ error }}</li>
+                  {% endfor %}
+                </ul>
+              {% endif %}
+            </div>
+
+            <!-- New password2 -->
+            <div>
+              {{ form.new_password2.label_tag }}
+              {{ form.new_password2}}
+              <span class="inline-block w-full text-sm text-gray-500">
+                {{ form.new_password2.help_text }}
+              </span>
+              {% if form.new_password2.errors %}
+                <ul class="errorlist mb-2">
+                  {% for error in form.new_password2.errors %}
+                    <li>{{ error }}</li>
+                  {% endfor %}
+                </ul>
+              {% endif %}
+            </div>
+
+            <div>
+              <button type="submit" class="py-2 px-4 border w-full border-gray-300 rounded-md bg-blue-500 hover:bg-blue-600 transition-colors text-white text-shadow-md cursor-pointer shadow">
+                Изменить пароль
+              </button>
+            </div>
+
+          </form>
+        </div>
+      {% else %}
+        <div class="mb-8">
+          {% include "includes/title.html" with text="Срок действия токена истек" only %}
+        </div>
+      {% endif %}
+    </div>
+  </div>
+
 {% endblock content %}
