--- a/devshub_project/users/templates/registration/password_reset_complete.html
+++ b/devshub_project/users/templates/registration/password_reset_complete.html
@@ -3,5 +3,13 @@
 {% block title %}Восстановление пароля{% endblock title %}
 
 {% block content %}
-  <h1>Пароль изменен</h1>
+  <div class="flex flex-col flex-1 py-8">
+    <div class="container mx-auto px-4 flex flex-col flex-1">
+
+      <div class="mb-8">
+        {% include "includes/title.html" with text="Пароль изменен" only %}
+      </div>
+
+    </div>
+  </div>
 {% endblock content %}
