--- a/devshub_project/users/templates/registration/password_reset_form.html
+++ b/devshub_project/users/templates/registration/password_reset_form.html
@@ -3,10 +3,25 @@
 {% block title %}Восстановление пароля{% endblock title %}
 
 {% block content %}
-  <h1>Восстановление пароля</h1>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Отправить письмо</button>
-  </form>
+  <div class="flex flex-col flex-1 py-8">
+    <div class="container mx-auto px-4 flex flex-col flex-1">
+
+      <div class="mb-8">
+        {% include "includes/title.html" with text="Восстановления пароля" only %}
+      </div>
+
+      <div class="max-w-1/2 w-full mx-auto font-medium mb-10">
+        <form method="post">
+          {% csrf_token %}
+          {{ form }}
+          <div class="mt-2">
+            <button type="submit" class="py-2 px-4 border w-full border-gray-300 rounded-md bg-blue-500 hover:bg-blue-600 transition-colors text-white text-shadow-md cursor-pointer shadow">
+                Отправить письмо для восстановления пароля
+            </button>
+          </div>
+        </form>
+      </div>
+
+    </div>
+  </div>
 {% endblock content %}
