--- a/devshub_project/users/templates/users/user_decks.html
+++ b/devshub_project/users/templates/users/user_decks.html
@@ -13,6 +13,10 @@
         {% include "includes/title.html" with text="Колоды" title=user.username only %}
       </div>
 
+      <div class="mb-8">
+        <a href="{% url "card_create" %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium success mb-2">Создать колоду</a>
+      </div>
+
       <div class="max-w-1/2 w-full mx-auto mb-8">
         {% include "includes/search_form.html" with placeholder="Циклы в Python" request=request request=request only %}
       </div>
