--- a/devshub_project/users/templates/users/user_projects.html
+++ b/devshub_project/users/templates/users/user_projects.html
@@ -12,6 +12,10 @@
         {% include "includes/title.html" with text="Проекты" title=user.username only %}
       </div>
 
+      <div class="mb-8">
+        <a href="{% url "card_create" %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium warning mb-2">Добавить Проект</a>
+      </div>
+
       <div class="max-w-1/2 w-full mx-auto mb-8">
         {% include "includes/search_form.html" with placeholder="Сервис сокращения ссылок на FastAPI" request=request only %}
       </div>
